  * Improving "album" plugin for Content module.
  * Added ability to add album in the pnForms media-item selector.
  * Added permission checks in the pnForms media-item selector.
  * New admin icon.
  * Fix #9 - Fixed performance of updating nested set values (moved to stored procedure).
  * Fix #45 - keywords not working with 'umlaute'
  * Fix #7 - cannot upload zip-file with gif
  * Fixed a bug in the photoshare conversion file (pnshow.php).
  * Fixed missing delete of invitations table when removing module.
  * Now using PostNuke .8 prototype scripts if available.
  * Fixed issues with Zikula's short URL handling.
  * Fixed menu positions.

Please check upgrade instructions in readme.txt!


Version 3.2.0
-------------
  * Adding plugins for new Content module
  * Adding album selector for pnForms.
  * Adding album and media item plugins for the Content module.
  * Bugfix: fixing some language define issues with _MSBACK


Version 3.1.1
-------------
  * Bugfix: removing hardcoded URL in remote API.


Version 3.1.0
-------------
  * Adding interface to Gallery Remote - a Java application for uploading 
    images (see http://gallery.menalto.com/wiki/Gallery_Remote)
  * The admin icon from Thomas didn't really fit into PN .76x, so
    back to the old one. The new one is there as admin8.gif
  * Bugfix: adding missing <embed> tag when pasting Windows Media Player HTML
  * Bugfix: subalbums was shown twice in the thumbnail view


Version 3.0.1
-------------
  * New admin icon from Thomas
  * Bugfix: browse back/fwd goes to thumbnails
  * Bugfix: [ 1774342 ] Hardcoded Script-Refs to www.pn760.dk


Version 3.0.0
-------------
  * Added ability to store images in database
  * Added upload of media files while selecting item for pasting into other application
  * Added sharpening of thumbnails (thanks to http://www.cerdmann.com/thumb/)
  * Added thumbnail overview
  * Added link-based invitations to see protected albums