@@ -1,0 +1,12 @@
+<?php
+// ------------------------------------------------------------------------------------
+// Translation for Mediashare module
+// Translation by: Jorn Wildt
+// ------------------------------------------------------------------------------------
+
+require_once('modules/mediashare/pnlang/dan/media_common_api.php');
+
+define('_MSINSPREVIEWPOPUP', 'Preview (popup)');
+define('_MSUNKNOWNIMAGEFORMAT', 'Ukendt billedformat');
+
+?>
