@@ -1,0 +1,13 @@
+<?php
+// ------------------------------------------------------------------------------------
+// Translation for Mediashare module
+// Translation by: Daniel Neugebauer
+// ------------------------------------------------------------------------------------
+
+require_once('modules/mediashare/pnlang/deu/media_common_api.php');
+
+define('_MSINSPREVIEWPOPUP', 'Vorschau (Popup)');
+define('_MSUNKNOWNIMAGEFORMAT', 'Unbekanntes Bildformat');
+
+
+?>
