@@ -1,0 +1,13 @@
+<?php
+// ------------------------------------------------------------------------------------
+// Translation for Mediashare module
+// Translation by: Jorn Wildt
+// ------------------------------------------------------------------------------------
+
+require_once('modules/mediashare/pnlang/eng/media_common_api.php');
+
+define('_MSINSPREVIEWPOPUP', 'Preview (popup)');
+define('_MSUNKNOWNIMAGEFORMAT', 'Unknown image format');
+
+
+?>
