@@ -682,7 +682,7 @@ span.mediashare-filmstrip-info
   border-right:     1px solid black;
   border-bottom:    1px solid black;
   background-color: #808080;
-  /*width: 120px;*/
+  width: 140px;
 }
 
 #mediashare div.psmenu ul
