@@ -5,7 +5,7 @@ body.slideshow
 {
   margin: 0px;
   padding: 0px;
-  background-color: #000;
+  background: #000;
   color: #FFF;
 }
 
