@@ -1,0 +1,57 @@
+<select name="htmlFormat" id="htmlFormat">
+
+ <option value="previewItem"><!--[pnml name=_MSINSPREVIEW]--></option>
+ <option value="fullItem"><!--[pnml name=_MSINSFULLITEM]--></option>
+ <option value="thumbnail"><!--[pnml name=_MSINSTHUMBNAIL]--></option>
+ <!--[if $mode == 'html']-->
+ <option value="thumbnailPopup"><!--[pnml name=_MSINSTHUMBNAILPOPUP]--></option>
+ <option value="previewPopup"><!--[pnml name=_MSINSPREVIEWPOPUP]--></option>
+ <option value="fullItemURL"><!--[pnml name=_MSINSFULLITEMURL]--></option>
+ <option value="fullItemURLPopup"><!--[pnml name=_MSINSFULLITEMURLPOPUP]--></option>
+ <option value="albumUrl"><!--[pnml name=_MSINSALBUMURL]--></option>
+ <option value="albumThumbnailURL"><!--[pnml name=_MSINSALBUMURLTHUMBNAIL]--></option>
+ <option value="albumUrlpopup"><!--[pnml name=_MSINSALBUMURLPOPUP]--></option>
+ <option value="albumThumbnailURLpopup"><!--[pnml name=_MSINSALBUMURLTHUMBNAILPOPUP]--></option>
+  <!--[/if]-->
+
+</select>
+
+
+<script type="text/javascript">
+
+<!--[include file=mediashare_pasteutility.html]-->
+
+function mediashare_paste_getHtml(mode)
+{
+  var htmlFormat = document.getElementById('htmlFormat').value;
+  var html = null;
+
+  var albumUrl = '<!--[pnmodurl modname=mediashare func=view aid=$mediaItem.parentAlbumId]-->';
+  var displayItemUrl = '<!--[pnmodurl modname=mediashare func=display mid=$mediaItem.id]-->';
+  var originalUrl = '<!--[$originalUrl]-->';
+  var previewUrl = '<!--[$previewUrl]-->';
+  var thumbnailUrl = '<!--[$thumbnailUrl]-->';
+
+  html = mediashare_paste_getStandardHtml(htmlFormat, mode);
+
+  if (html == null)
+  {
+    switch (htmlFormat)
+    {
+      case 'fullItem':
+        html = "<img src=\"" + originalUrl + "\"/>";
+      break;
+      case 'previewItem':
+        html = "<img src=\"" + previewUrl + "\"/>";
+      break;
+      case 'previewPopup':
+        html = "<a href=\"javascript:popupMediaViewer('" + displayItemUrl + "')\">" 
+               + "<img src=\"" + previewUrl + "\"/></a>";
+      break;
+    }
+  }
+
+  return html;
+}
+
+</script>
